--- a/Core01/Client.Mvc/Views/Home/Index.cshtml
+++ b/Core01/Client.Mvc/Views/Home/Index.cshtml
@@ -1,8 +1,25 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    //Layout = null;
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+<body>
+    <div class="text-center" id="body_id">
+        <h1 class="display-4">Hello world !!!+++</h1>
+        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    </div>
+
+    @*<script>
+        $(document).ready(function () {
+            Site_Ready();
+            Index_Ready();
+        });
+    </script>*@
+
+</body>
+</html>
