--- a/Core01/Client.Mvc/Views/Admin/sys_user.cshtml
+++ b/Core01/Client.Mvc/Views/Admin/sys_user.cshtml
@@ -1,12 +1,23 @@
 ﻿@model Server.Core.ViewModel.VmBase
 
-<table>
-    @foreach (var p in Model.Users)
-    {
-        <tr>
-            <td>@p.user_id</td>
-            <td>&nbsp&nbsp&nbsp</td>
-            <td>@p.user_name</td>
-        </tr>
-    }
-</table>
+<html lang="en">
+<body>
+    <table>
+        @foreach (var p in Model.UsersL)
+        {
+            <tr>
+                <td>@p.user_id</td>
+                <td>&nbsp&nbsp&nbsp</td>
+                <td>@p.user_name</td>
+            </tr>
+        }
+    </table>
+
+    <script>
+        $(document).ready(function () {
+            Site_Accordion();
+        });
+    </script>
+</body>
+</html>
+
