--- a/Core01/Client.Mvc/Views/Admin/sys_user.cshtml
+++ b/Core01/Client.Mvc/Views/Admin/sys_user.cshtml
@@ -2,6 +2,10 @@
 
 <html lang="en">
 <body>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    @*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
+
+
     <table>
         @foreach (var p in Model.UsersL)
         {
@@ -18,6 +22,7 @@
             Site_Accordion();
         });
     </script>
+
 </body>
 </html>
 
