--- a/Core01/Client.Mvc/Views/Home/Index.cshtml
+++ b/Core01/Client.Mvc/Views/Home/Index.cshtml
@@ -10,14 +10,7 @@
 </head>
 <body>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/index.js" asp-append-version="true"></script>
-
-    <link href="~/Git/ext-all.css" rel="stylesheet" />
-    <script src="~/Git/ext-all.js"></script>
-
+    @*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
 
     <div class="text-center" id="body_id">
         <h1 class="display-4">Hello world !!!+++</h1>
