--- a/Core01/Client.Mvc/Views/Shared/_Layout.cshtml
+++ b/Core01/Client.Mvc/Views/Shared/_Layout.cshtml
@@ -48,8 +48,8 @@
     @*<link href="http://cdn.sencha.com/ext/gpl/4.2.0/resources/css/ext-all.css" rel="stylesheet" />*@
     @*<script src="http://cdn.sencha.com/ext/gpl/4.2.0/ext-all.js"></script>*@
 
-    <link href="~/Git/ext-all.css" rel="stylesheet" />
-    <script src="~/Git/ext-all.js"></script>
+    <link href="~/lib/ext-js/ext-all.css" rel="stylesheet" />
+    <script src="~/lib/ext-js/ext-all.js"></script>
 
     @RenderSection("Scripts", required: false)
 
