--- a/Core01/Client.Mvc/Views/Admin/sys_user.cshtml
+++ b/Core01/Client.Mvc/Views/Admin/sys_user.cshtml
@@ -19,7 +19,7 @@
 
     <script>
         $(document).ready(function () {
-            Site_Accordion();
+            Site_Accordion("@Model.UsersJson");
         });
     </script>
 
