--- a/Core01/Client.Mvc/Views/Admin/sys_user.cshtml
+++ b/Core01/Client.Mvc/Views/Admin/sys_user.cshtml
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-    @*<script src="~/lib/jquery/dist/jquery.min.js"></script>*@
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     @*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
 
     @ListHelper.Customize(Html, Model)
