--- a/Core01/Client.Mvc/Views/Admin/sys_user.cshtml
+++ b/Core01/Client.Mvc/Views/Admin/sys_user.cshtml
@@ -3,16 +3,10 @@
 
 @model Server.Core.ViewModel.VmBase
 
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
 <body>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    @*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
-
     @ListHelper.Customize(Html, Model)
+
+    @*<script>$(document).ready(function () {Site_Accordion("@Model.UsersJson");});</script>*@
 
 </body>
 </html>
