--- a/Core01/Client.Mvc/Views/Home/Index.cshtml
+++ b/Core01/Client.Mvc/Views/Home/Index.cshtml
@@ -3,15 +3,12 @@
     //Layout = null;
 }
 
-<html lang="en">
+@*<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
+</head>*@
 <body>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    @*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
-
     <div class="text-center" id="body_id">
         <h1 class="display-4">Hello world !!!+++</h1>
         <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
