--- a/Core01/Client.Mvc/Views/Shared/_Layout.cshtml
+++ b/Core01/Client.Mvc/Views/Shared/_Layout.cshtml
@@ -1,7 +1,26 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
-<body>
 
+<html lang="en">
+
+<head>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/index.js" asp-append-version="true"></script>
+
+    <link href="http://cdn.sencha.com/ext/gpl/4.2.0/resources/css/ext-all.css" rel="stylesheet" />
+    <script src="http://cdn.sencha.com/ext/gpl/4.2.0/ext-all.js"></script>
+
+    @*<link href="~/lib/ext-js/ext-all.css" rel="stylesheet" />
+        <script src="~/lib/ext-js/ext-all.js"></script>*@
+
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+</head>
+
+<body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
@@ -30,32 +49,19 @@
         </nav>
     </header>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/index.js" asp-append-version="true"></script>
-
-    <link href="http://cdn.sencha.com/ext/gpl/4.2.0/resources/css/ext-all.css" rel="stylesheet" />
-    <script src="http://cdn.sencha.com/ext/gpl/4.2.0/ext-all.js"></script>
-
-    @*<link href="~/lib/ext-js/ext-all.css" rel="stylesheet" />
-    <script src="~/lib/ext-js/ext-all.js"></script>*@
-
-    @RenderSection("Scripts", required: false)
-
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
+    @RenderSection("Scripts", required: false)
 
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2021 - ru.tsb.mvc - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-
 </body>
+
 </html>
