--- a/Core01/Client.Mvc/Views/Shared/_Layout.cshtml
+++ b/Core01/Client.Mvc/Views/Shared/_Layout.cshtml
@@ -3,17 +3,20 @@
 <html lang="en">
 
 <head>
+    <link href="@Url.Content("~/css/site.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/lib/bootstrap/dist/css/bootstrap.css")" rel="stylesheet" type="text/css" />
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/index.js" asp-append-version="true"></script>
 
-    <link href="http://cdn.sencha.com/ext/gpl/4.2.0/resources/css/ext-all.css" rel="stylesheet" />
-    <script src="http://cdn.sencha.com/ext/gpl/4.2.0/ext-all.js"></script>
+    @*<link href="http://cdn.sencha.com/ext/gpl/4.2.0/resources/css/ext-all.css" rel="stylesheet" />
+    <script src="http://cdn.sencha.com/ext/gpl/4.2.0/ext-all.js"></script>*@
 
-    @*<link href="~/lib/ext-js/ext-all.css" rel="stylesheet" />
-        <script src="~/lib/ext-js/ext-all.js"></script>*@
+    <link href="~/lib/ext-js/ext-all.css" rel="stylesheet" />
+    <script src="~/lib/ext-js/ext-all.js"></script>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,23 +27,22 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ru.tsb.mvc</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                        <li class="nav-item h4">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Главная страница</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item h4">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="GetUsers">Пользователи</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item h4">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Data" asp-action="GetVillages">Нас. пункты</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item h4">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Data" asp-action="GetStreets">Улицы</a>
                         </li>
                     </ul>
