--- a/Core01/Client.Mvc/wwwroot/css/site.css
+++ b/Core01/Client.Mvc/wwwroot/css/site.css
@@ -69,3 +69,14 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/*ul {
+    list-style-type: none;
+    overflow: hidden;
+}
+li {
+    display: inline;
+    padding: 2px 20px;
+    float: left;
+}
+*/
