--- a/Core01/Client.Mvc/Views/Shared/_Layout.cshtml
+++ b/Core01/Client.Mvc/Views/Shared/_Layout.cshtml
@@ -34,16 +34,22 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item h4">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Главная страница</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item h4">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="GetUsers">Пользователи</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="GetUsers">Users</a>
+                        </li>
+                        @*<li class="nav-item h4">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Data" asp-action="GetVillages">Villages</a>
                         </li>
                         <li class="nav-item h4">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Data" asp-action="GetVillages">Нас. пункты</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Data" asp-action="GetStreets">Streets</a>
+                        </li>*@
+                        <li class="nav-item h4">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="about">About</a>
                         </li>
                         <li class="nav-item h4">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Data" asp-action="GetStreets">Улицы</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="about1">About1</a>
                         </li>
                     </ul>
                 </div>
