--- a/Core01/Client.Mvc/Views/Shared/_Layout.cshtml
+++ b/Core01/Client.Mvc/Views/Shared/_Layout.cshtml
@@ -39,18 +39,18 @@
                         <li class="nav-item h4">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="GetUsers">Users</a>
                         </li>
-                        @*<li class="nav-item h4">
+                        <li class="nav-item h4">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Data" asp-action="GetVillages">Villages</a>
                         </li>
                         <li class="nav-item h4">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Data" asp-action="GetStreets">Streets</a>
-                        </li>*@
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Data" asp-action="GetGosStreets">Streets</a>
+                        </li>
                         <li class="nav-item h4">
                             <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="about">About</a>
                         </li>
-                        <li class="nav-item h4">
+                        @*<li class="nav-item h4">
                             <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="about1">About1</a>
-                        </li>
+                        </li>*@
                     </ul>
                 </div>
             </div>
