--- a/Core01/Client.Mvc/Views/Shared/_Layout.cshtml
+++ b/Core01/Client.Mvc/Views/Shared/_Layout.cshtml
@@ -48,9 +48,9 @@
                         <li class="nav-item h4">
                             <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="about">About</a>
                         </li>
-                        @*<li class="nav-item h4">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="about1">About1</a>
-                        </li>*@
+                        <li class="nav-item h4">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="config">Config</a>
+                        </li>
                     </ul>
                 </div>
             </div>
