--- a/metanit/21.Аутентификация и авторизация/Client.Mvc/Views/Home/About.cshtml
+++ b/metanit/21.Аутентификация и авторизация/Client.Mvc/Views/Home/About.cshtml
@@ -6,10 +6,10 @@
 
 <body>
     <div class="text-center" id="body_id">
-        @*<div class="display-4">Hello @Model.UserName !!!</div>*@
+        @*<div class="display-4">About page for @Model.UserName.</div>*@
         <table class="text-center display-4">
             <tr>
-                <td>Hello</td>
+                <td>About page for</td>
                 <td style="padding: 25px; color: red;">[@Model.UserName]</td>
                 <td>!!!</td>
             </tr>
@@ -18,9 +18,3 @@
     </div>
 </body>
 
-<script>
-    $(document).ready(function () {
-        Site_Border();
-        Index_Ready();
-    });
-</script>
