--- a/metanit/21.Аутентификация и авторизация/Client.Mvc/Views/Shared/_Layout.cshtml
+++ b/metanit/21.Аутентификация и авторизация/Client.Mvc/Views/Shared/_Layout.cshtml
@@ -37,19 +37,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item h4">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="GetUsers">Users</a>
-                        </li>
-                        <li class="nav-item h4">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Data" asp-action="GetVillages">Villages</a>
-                        </li>
-                        <li class="nav-item h4">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Data" asp-action="GetGosStreets">Streets</a>
-                        </li>
-                        <li class="nav-item h4">
                             <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="about">About</a>
                         </li>
                         <li class="nav-item h4">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="config">Config</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="logout">Logout</a>
                         </li>
                     </ul>
                 </div>
