--- a/metanit/21.Аутентификация и авторизация/Client.Mvc/Views/Home/About.cshtml
+++ b/metanit/21.Аутентификация и авторизация/Client.Mvc/Views/Home/About.cshtml
@@ -9,7 +9,9 @@
         @*<div class="display-4">About page for @Model.UserName.</div>*@
         <table class="text-center display-4">
             <tr>
-                <td>About page for</td>
+                <td>@Model.Controller</td>
+                <td style="padding: 25px; color: blue;">[@Model.Info]</td>
+                <td>page for</td>
                 <td style="padding: 25px; color: red;">[@Model.UserName]</td>
                 <td>!!!</td>
             </tr>
