--- a/metanit/21.Аутентификация и авторизация/Client.Mvc/Views/Shared/_Layout.cshtml
+++ b/metanit/21.Аутентификация и авторизация/Client.Mvc/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="about">About</a>
                         </li>
                         <li class="nav-item h4">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="policy">Policy</a>
+                        </li>
+                        <li class="nav-item h4">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="logout">Logout</a>
                         </li>
                     </ul>
