--- a/metanit/21.Аутентификация и авторизация/Client.Mvc/Views/Home/Index.cshtml
+++ b/metanit/21.Аутентификация и авторизация/Client.Mvc/Views/Home/Index.cshtml
@@ -21,6 +21,6 @@
 <script>
     $(document).ready(function () {
         Site_Border();
-        Index_Ready();
+        //Index_Ready();
     });
 </script>
