--- a/metanit/21.Аутентификация и авторизация/Client.Mvc/Views/Home/About.cshtml
+++ b/metanit/21.Аутентификация и авторизация/Client.Mvc/Views/Home/About.cshtml
@@ -5,15 +5,21 @@
 }
 
 <body>
-    <div class="text-center" id="body_id">
+    <div id="body_id">
+        @*<div class="text-center" id="body_id">*@
         @*<div class="display-4">About page for @Model.UserName.</div>*@
-        <table class="text-center display-4">
+        <table class="display-4">
             <tr>
-                <td>@Model.Controller</td>
-                <td style="padding: 25px; color: blue;">[@Model.Info]</td>
-                <td>page for</td>
+                <td>Controller</td>
+                <td style="padding: 25px; color: blue;">@Model.Controller</td>
+            </tr>
+            <tr>
+                <td>Info</td>
+                <td style="padding: 25px; color: red;">[@Model.Info]</td>
+            </tr>
+            <tr>
+                <td>UserName</td>
                 <td style="padding: 25px; color: red;">[@Model.UserName]</td>
-                <td>!!!</td>
             </tr>
         </table>
         <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
