--- a/metanit/22.ASP.NET Core Identity/Client.Mvc/Views/_ViewImports.cshtml
+++ b/metanit/22.ASP.NET Core Identity/Client.Mvc/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using ru.tsb.mvc
-@*@using ru.tsb.mvc.Models*@
+﻿@using Client.Mvc
+@using Client.Mvc.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
