--- a/Tr-58939-Store/Hcs.ClientMvc/Views/Shared/_Layout.cshtml
+++ b/Tr-58939-Store/Hcs.ClientMvc/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                     <li class="nav-item h6">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Test">Test</a>
                     </li>
+                    <li class="nav-item h6">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TestStr">Test-str</a>
+                    </li>
                 </ul>
             </div>
         </nav>
