--- a/Tr-58943-Source/Hcs.ClientMvc/Views/Shared/_Layout.cshtml
+++ b/Tr-58943-Source/Hcs.ClientMvc/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Test">Test</a>
                     </li>
                     <li class="nav-item h6">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TestStr">Test-str</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TestStr">TestStr</a>
                     </li>
                 </ul>
             </div>
