--- a/Core01/Client.Mvc/Views/Data/nsi_village.cshtml
+++ b/Core01/Client.Mvc/Views/Data/nsi_village.cshtml
@@ -1,7 +1,17 @@
 ﻿@model Server.Core.ViewModel.VmBase
 
 <table>
-    @foreach (var p in Model.VwNsiVillages)
+    @foreach (var p in Model.villages)
+    {
+        <tr>
+            <td>@p.village_id</td>
+            <td>&nbsp&nbsp&nbsp</td>
+            <td>@p.rgn_id</td>
+            <td>&nbsp&nbsp&nbsp</td>
+            <td>@p.village_name</td>
+        </tr>
+    }
+    @*@foreach (var p in Model.VwNsiVillages)
     {
         <tr>
             <td>@p.NVILLAGE_ID</td>
@@ -10,5 +20,5 @@
             <td>&nbsp&nbsp&nbsp</td>
             <td>@p.NVILLAGE_NAME</td>
         </tr>
-    }
+    }*@
 </table>
