--- a/Core01/Client.Mvc/Views/Data/nsi_village.cshtml
+++ b/Core01/Client.Mvc/Views/Data/nsi_village.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Server.Core.VmBase
 
 <table>
-    @foreach (var p in Model.villages)
+    @*@foreach (var p in Model.villages)
     {
         <tr>
             <td>@p.village_id</td>
@@ -10,7 +10,7 @@
             <td>&nbsp&nbsp&nbsp</td>
             <td>@p.village_name</td>
         </tr>
-    }
+    }*@
     @*@foreach (var p in Model.VwNsiVillages)
     {
         <tr>
