--- a/Core01/Client.Mvc/Views/Data/type_street.cshtml
+++ b/Core01/Client.Mvc/Views/Data/type_street.cshtml
@@ -7,14 +7,14 @@
 
 
     <table>
-        @foreach (var p in Model.type_streetsL)
+        @*@foreach (var p in Model.type_streetsL)
         {
             <tr>
                 <td>@p.tstreet_id</td>
                 <td>&nbsp&nbsp&nbsp</td>
                 <td>@p.tstreet_name</td>
             </tr>
-        }
+        }*@
     </table>
 
     <script>
