--- a/Core01/Client.Mvc/Views/Shared/_Layout.cshtml
+++ b/Core01/Client.Mvc/Views/Shared/_Layout.cshtml
@@ -54,6 +54,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item h4">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Data" asp-action="DoSmth">DoSmth</a>
+                        </li>
+                        <li class="nav-item h4">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Data" asp-action="GetVillages">Villages</a>
                         </li>
                         <li class="nav-item h4">
