--- a/Core01/Client.Mvc/Views/Data/nsi_street.cshtml
+++ b/Core01/Client.Mvc/Views/Data/nsi_street.cshtml
@@ -7,7 +7,7 @@
 
 
     <table>
-        @foreach (var p in Model.VwNsiStreets)
+        @*@foreach (var p in Model.VwNsiStreets)
          {
             <tr>
                 <td>@p.NVILLAGE_ID</td>
@@ -22,7 +22,7 @@
                 <td>&nbsp&nbsp&nbsp</td>
                 <td>@p.NSTREET_NAME</td>
             </tr>
-        }
+        }*@
     </table>
 
     <script>
