--- a/Core01/Client.Mvc/Views/Data/nsi_village.cshtml
+++ b/Core01/Client.Mvc/Views/Data/nsi_village.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Server.Core.VmBase
 
 <table>
-    @if (Model.VwNsiVillages != null)
+    @*@if (Model.VwNsiVillages != null)
     {
         foreach (var p in Model.VwNsiVillages)
         {
@@ -13,5 +13,5 @@
                 <td>@p.NVILLAGE_NAME</td>
             </tr>
         }
-    }
+    }*@
 </table>
